tests/semantic_cases/invalid/readint_statement_call.ob0
(* INVALID: ReadInt must be used as expression call, not as statement call *)
MODULE Main;
BEGIN
  ReadInt()
END Main.
